pkg/manifests/policy/manifests/k8scontainerlimits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]

  parameters:
    cpu: "200m"
    memory: "1Gi"
