pkg/manifests/policy/manifests/k8shorizontalpodautoscaler.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHorizontalPodAutoscaler
metadata:
  name: horizontal-pod-autoscaler
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["autoscaling"]
        kinds: ["HorizontalPodAutoscaler"]
  parameters:
    minimumReplicaSpread: 1
    enforceScaleTargetRef: true
