pkg/manifests/policy/manifests/k8spspallowedusers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-allowed-users
spec:
  match:
    kinds:
      - apiGroups:
          - ''
        kinds:
          - Pod
  parameters:
    # The root UID and GID is 0 so ensuring it is min 1
    runAsUser:
      rule: MustRunAsNonRoot
      ranges:
        - min: 1
          max: 65535
